--- a/User-service/src/main/resources/bootstrap.yaml
+++ b/User-service/src/main/resources/bootstrap.yaml
@@ -1,3 +1,7 @@
-
-server.port=8081
-spring.application.name=user-service
+spring:
+  application:
+    name: user-service
+  cloud:
+    config:
+      enabled: true
+      uri: https://localhost:8001
