--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.config.service</groupId>
 	<artifactId>config-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>config-service</name>
-	<description>Config Spring Cloud &amp; Git</description>
+	<description>Config Spring CloudGit</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2020.0.3</spring-cloud.version>
