--- a/motorcycle-service/pom.xml
+++ b/motorcycle-service/pom.xml
@@ -11,10 +11,10 @@
 	<groupId>com.motorcicle</groupId>
 	<artifactId>motorcicle-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>motorcicle-service</name>
+	<name>motorcycle-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
