--- a/config-service/src/main/resources/bootstrap.yaml
+++ b/config-service/src/main/resources/bootstrap.yaml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          default-label: instances
+          default-label: gateway
           uri: https://github.com/AlPetrovich/Microservices-Backend
           search-paths: config-data
   application:
