--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -16,15 +16,15 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: user-service
-          uri: lb://user-service
+        - id: usuario-service
+          uri: lb://usuario-service
           predicates:
-            - Path=/user/**
-        - id: car-service
-          uri: lb://car-service
+            - Path=/usuario/**
+        - id: carro-service
+          uri: lb://carro-service
           predicates:
-            - Path=/car/**
-        - id: motorcycle-service
-          uri: lb://motorcycle-service
+            - Path=/carro/**
+        - id: moto-service
+          uri: lb://moto-service
           predicates:
-            - Path=/motorcycle/**
+            - Path=/moto/**
