--- a/moto-service/pom.xml
+++ b/moto-service/pom.xml
@@ -9,10 +9,10 @@
 		<version>2.5.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>carro-service</groupId>
-	<artifactId>carro-service</artifactId>
+	<groupId>com.moto.service</groupId>
+	<artifactId>moto-service</artifactId>
 	<version>1.0</version>
-	<name>carro-service</name>
+	<name>moto-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
